Net/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: pliu
spec:
  replicas: 1  # 单个副本，因为数据库通常只需要一个副本
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest  # 使用 MongoDB 官方镜像
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "0.1"  # 每个 Pod 请求 1/10 CPU
            memory: "100Mi"  # 每个 Pod 请求 100 MiB 内存
          limits:
            cpu: "0.2"  # 每个 Pod 限制 1/5 CPU
            memory: "200Mi"  # 每个 Pod 限制 200 MiB 内存
        livenessProbe:
          exec:
            command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 5
