Net/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: pliu
spec:
  selector:
    app: mongodb  # 匹配的 Pod 标签
  ports:
    - protocol: TCP
      port: 8003  # 服务暴露的端口，MongoDB 默认端口
      targetPort: 27017  # Pod 内部容器使用的端口
  type: ClusterIP
