Net/service-webdb.yaml

apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: pliu
spec:
  selector:
    app: webdb  # 匹配的 Pod 标签
  ports:
    - protocol: TCP
      port: 80  # 服务暴露的端口
      targetPort: 5000  # Pod 内部容器使用的端口
  type: ClusterIP
