Net/service-webnodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: pliu
spec:
  selector:
    app: webnodb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
